# vehicle_tracking

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: vehicle_tracking.cpp
